--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/sortablejs": "^1.13.0",
     "@types/three": "^0.156.0",
     "@vitejs/plugin-vue": "^2.0.0",
+    "ammo.js": "^0.0.10",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vue-tsc": "^0.29.8"
