feat(three): 添加 MMD 模型加载和动画功能
- 新增 path-browserify 依赖，用于在浏览器中使用 path 模块
- 重构 myThree.ts，添加 MMD 模型加载和动画功能
- 更新 HomePage.vue，集成 MMD 动画和实时渲染

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/lodash": "^4.14.182",
     "mitt": "^3.0.0",
     "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
     "qs": "^6.10.2",
     "sass": "^1.48.0",
     "three": "^0.157.0",
